fix: disable dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,12 +24,12 @@
   --font-fraunces: var(--font-fraunces);
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
@@ -38,7 +38,11 @@ body {
   margin-bottom: 2rem;
 }
 
-h2:not(.font-inter), h3, h4, h5, h6 {
+h2:not(.font-inter),
+h3,
+h4,
+h5,
+h6 {
   font-family: var(--font-fraunces);
 }
 
